user service update
